--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@keyframes openApp{
+  0%{
+    transform: scale(0.6);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.animate-openApp{
+  animation: openApp 0.3s ease-out forwards;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%; 
+  overflow-x: hidden; 
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
